--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,11 @@
 @import-normalize; /* bring in normalize.css styles */
 
+:root {
+  --main-accent-color: #390a61;
+  /* --active-acsent-color: #0a2361; */
+  --active-color: #866fe6;
+}
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
@@ -12,4 +18,9 @@ body {
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+}
+
+button {
+  /* border-radius: 5px;
+  border: 1px solid inherit; */
 }
